<resources>
    <string name="app_name">BaiduOrderPlatform</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="start_page">首页</string>
    <string name="order">订单</string>
    <string name="me">我的</string>
    <string name="burger_king">汉堡王</string>
    <string name="pizza">必胜客欢乐餐厅</string>
    <string name="spicy_chicken">七德好美食城</string>
    <string name="boiled_chicken">黄焖鸡米饭</string>
    <string name="bone_soup">老徽州咸肉菜饭骨头汤</string>
    <string name="dicos">德克士</string>
    <string name="famous_kitchen">大牌小厨</string>
    <string name="curry_food">津津咖喱</string>
    <string name="japanese_food">和风便当</string>
    <string name="coupon">券</string>
    <string name="ticket">票</string>
    <string name="online_pay">付</string>
    <string name="repay">赔</string>
    <string name="example_sales">已售200份</string>
    <string name="example_distance">600m</string>
    <string name="example_delivery_min_order">起送￥20</string>
    <string name="example_delivery_cost">配送￥7</string>
    <string name="example_average_time">平均20分钟</string>
    <string name="example_discount_online">满30减15元，满50减23元（在线支付专享）</string>
    <string name="example_discount_wallat">使用百度钱包多减2元</string>
    <string name="search_shops_and_goods">搜索商户或者商品名称</string>
    <string name="all_shops">全部商家</string>
    <string name="login_in">您还没有登录，请登录后查看订单</string>
    <string name="login_and_reg">&#160;&#160;&#160;登录/注册&#160;&#160;&#160;</string>
    <string name="custom_service">客服 400-011-7777</string>
    <string name="sold">已售</string>
    <string name="sold_unit">份</string>
    <string name="least_delivery_amount">起送￥</string>
    <string name="delivery_cost">配送￥</string>
    <string name="average">平均</string>
    <string name="time_unit">分钟</string>
    <string name="has_coupon">券</string>
    <string name="has_ticket">票</string>
    <string name="has_online_pay">付</string>
    <string name="has_repay">赔</string>
    <string name="discount_online_pay">满30减15元，满50减23元（在线支付专享）</string>
    <string name="discount_baidu_wallat">使用百度钱包多减2元</string>
    <string name="food_and_drink">餐饮</string>
    <string name="super_market">超市购</string>
    <string name="fruit">水果生鲜</string>
    <string name="coffee">下午茶</string>
    <string name="rich">土豪特供</string>
    <string name="new_shop">新店</string>
    <string name="baidu_delivery">百度配送</string>
    <string name="hot_pot">火锅</string>
    <string name="tag_image">image</string>
    <string name="tag_text">text</string>
    <string name="my_address">我的送餐地址</string>
    <string name="my_coupon">我的代金券</string>
    <string name="my_repay_money">我的退款</string>
    <string name="my_message">我的消息</string>
    <string name="my_favorite">我的收藏</string>
    <string name="my_comments">我的评论</string>
    <string name="my_wallat">百度钱包</string>
    <string name="baidu_rice">百度糯米</string>
    <string name="common_questions">常见问题</string>
</resources>
