<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/color_white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="20dp">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:id="@+id/layout_shop_image">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ivShopImage"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:src="@drawable/home_image_shop_pizza"/>

            <ImageView
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:id="@+id/ivBaiduDelivery"
                android:src="@drawable/home_image_baidu_delivery"/>

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/layout_shop_image"
            android:layout_alignBottom="@+id/layout_shop_image"
            android:layout_toEndOf="@+id/layout_shop_image"
            android:layout_toRightOf="@+id/layout_shop_image"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:orientation="vertical"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvShopName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/pizza"
                    android:textColor="@color/color_black"
                    android:textSize="15sp" />

                <LinearLayout
                    android:layout_width="98dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:gravity="end">

                    <TextView
                        android:id="@+id/tvCoupon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toLeftOf="@+id/tvTicket"
                        android:background="@drawable/home_image_background"
                        android:gravity="center"
                        android:text="@string/coupon"
                        android:textColor="@color/color_blue" />

                    <TextView
                        android:id="@+id/tvTicket"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toLeftOf="@+id/tvOnlinePay"
                        android:background="@drawable/home_image_background"
                        android:gravity="center"
                        android:text="@string/ticket"
                        android:textColor="@color/color_blue" />

                    <TextView
                        android:id="@+id/tvOnlinePay"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toLeftOf="@+id/tvRepay"
                        android:background="@drawable/home_image_background"
                        android:gravity="center"
                        android:text="@string/online_pay"
                        android:textColor="@color/color_blue" />

                    <TextView
                        android:id="@+id/tvRepay"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:background="@drawable/home_image_background"
                        android:gravity="center"
                        android:text="@string/repay"
                        android:textColor="@color/color_blue"/>

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RatingBar
                    android:id="@+id/ratingBar"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:isIndicator="true"
                    android:numStars="5"
                    android:rating="0"
                    android:stepSize="0.1" />

                <TextView
                    android:id="@+id/tvSales"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_toEndOf="@+id/ratingBar"
                    android:layout_toRightOf="@+id/ratingBar"
                    android:text="@string/example_sales" />

                <TextView
                    android:id="@+id/tvDistance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/example_distance"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvDeliveryMinOrder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/example_delivery_min_order" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/home_image_vertical_line" />

                <TextView
                    android:id="@+id/tvDeliveryCost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/example_delivery_cost" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/home_image_vertical_line" />

                <TextView
                    android:id="@+id/tvAverageTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/example_average_time" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/list_home_discount_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:src="@drawable/home_image_horizontal_line" />

        <LinearLayout
            android:id="@+id/list_home_discount_oneline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/home_icon_discount_online" />

            <TextView
                android:id="@+id/tvDiscountOnline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:text="@string/example_discount_online"
                android:textSize="12dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/list_home_discount_wallat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/home_icon_discount_wallat" />

            <TextView
                android:id="@+id/tvDiscountWallat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:text="@string/example_discount_wallat"
                android:textSize="12dp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>